--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "mocha": "^10.1.0",
     "typescript": "^4.9.3",
     "@vscode/test-electron": "^2.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IvanGrigorov/file-notes.git"
   }
 }
